category menu and fix price alignment

--- a/netaddiction_website/static/src/scss/main.scss
+++ b/netaddiction_website/static/src/scss/main.scss
@@ -68,7 +68,7 @@ footer {
                     color: #FF6600;
                     line-height: 27px;
                     .oe_currency_value {
-                        vertical-align: text-top;
+                        vertical-align: -0.32em;
                         font-size: 27px;
                         font-weight: 700;
                     }
